* Updated WP_Query * Sticky Posts now ignored in slider * Sizing bug for single slide fixed * Margin removed for single slide * Image vertically aligned in slide
git-svn-id: https://plugins.svn.wordpress.org/recent-posts-flexslider/trunk@744449 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/slider.css
+++ b/css/slider.css
@@ -22,9 +22,24 @@
 /* FlexSlider Necessary Styles
 *********************************/ 
 .flexslider {margin: 0; padding: 0;}
-.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden; margin: 0px;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width: 100%; display: block; margin: 0;}
 .flex-pauseplay span {text-transform: capitalize;}
+
+.flexslider .slides > li { /* Hide the slides before the JS is loaded. Avoids image jumping */
+	display: none;
+	-webkit-backface-visibility: hidden;
+	margin: 0px;
+	overflow: hidden;
+	position: relative;
+}
+
+.flexslider .slides img {
+	width: 100%;
+	display: block;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+}
 
 /* Clearfix for the .slides element */
 .slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;} 
